--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-package-lock.json
-package.json
 /.pnp
 .pnp.js
 
@@ -23,3 +21,10 @@ package.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDEs
+.vscode/
+
+# logs
+logs/
+*.log
